# pyradio

./: .gitignore  README.md  pyproject.toml
devel/: build_install_pyradio
docs/: uv-install.md
